Build header section with mixture of fr, min-content and fixed sizes to make responsive spacing between elements. Use ::before and ::after pseudo elements as grid cells to create the effect of 2 lines surrounding text.

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,52 @@
 .header {
 	background-color: $color-grey-dark-1;
 	grid-column: full-start / col-end 6;
+	background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)),
+					  url(../img/hero.jpeg);
+	background-size: cover;
+	background-size: center;
+	padding: 8rem;
+	padding-top: 4rem;
+	display: grid;
+	grid-template-rows: 1fr min-content 6rem 1fr;
+	row-gap: 1.5rem;
+	justify-content: center;
+
+	&__logo {
+		height: 3rem;
+		justify-self: center;
+	}
+
+	&__btn {
+		align-self: start;
+		justify-self: start;
+	}
+
+	&__seen-on-text {
+		display: grid;
+		grid-template-columns: 1fr max-content 1fr;
+		align-items: center;
+		font-size: 1.6rem;
+		color: $color-grey-light-2;
+		column-gap: 1.5rem;
+
+		&::before,
+		&::after {
+			content: "";
+			height: 1px;
+			display: block;
+			background-color: currentColor;
+		}
+	}
+
+	&__seen-on-logos {
+		display: flex;
+		column-gap: 3rem;
+		justify-content: space-around;
+
+		img {
+			height: 2.5rem;
+			filter: brightness(70%);
+		}
+	}
 }
